--- a/web-app/src/app/school/index/index.component.html
+++ b/web-app/src/app/school/index/index.component.html
@@ -1,1 +1,58 @@
-<p>index works!</p>
+<div class="container-md main">
+  <div class="row">
+    <div class="col-md-8">
+      <form (ngSubmit)="onQuery()">
+        <label>学校名称：</label>
+        <input name="name" [formControl]="params.name" type="text"/>
+        <button class="btn btn-outline-success mb-2 search" type="submit">查询</button>
+      </form>
+    </div>
+    <div class="col-md-4 text-right">
+      <a class="btn btn-primary" (click)="openAddDialog()"><span class="oi oi-plus"></span>新增</a>
+    </div>
+  </div>
+
+  <table class="table">
+    <tr>
+      <th>序号</th>
+      <th>学校名称</th>
+      <th>操作</th>
+    </tr>
+    <tr *ngFor="let school of pageSchool.content; index as index">
+      <td>{{index + 1}}</td>
+      <td>{{school.name}}</td>
+      <td>
+        <button (click)="openEditDialog(school)" class="btn btn-sm btn-info button"><span class="oi oi-pencil"></span>编辑</button>
+        <button (click)="onDelete(school)" class="btn btn-sm btn-danger"><span class="oi oi-trash"></span>删除</button>
+      </td>
+    </tr>
+  </table>
+  <div *ngIf="pageSchool" class="row">
+    <div class="col-4" id="pageInfo">
+      第{{params.page + 1}}/{{pageSchool.totalPages}}页 每页{{params.size}}条
+    </div>
+    <div class="col-8">
+      <nav>
+        <ul class="pagination">
+          <li class="page-item" [ngClass]="{'disabled': params.page === 0}" (click)="onPage(0)">
+            <span class="page-link">首页</span>
+          </li>
+          <li class="page-item" [ngClass]="{'disabled': params.page === 0}" (click)="onPage(params.page - 1)">
+            <span class="page-link">上一页</span>
+          </li>
+          <li class="page-item" [ngClass]="{'active': params.page === page}" *ngFor="let page of pages" (click)="onPage(page)">
+            <span class="page-link" *ngIf="page !== params.page">{{page + 1}}</span>
+            <span class="page-link" *ngIf="page === params.page">{{page + 1}}<span class="sr-only">(current)</span></span>
+          </li>
+          <li class="page-item" [ngClass]="{'disabled': params.page === pageSchool.totalPages - 1}" (click)="onPage(params.page + 1)">
+            <span class="page-link">下一页</span>
+          </li>
+          <li class="page-item" [ngClass]="{'disabled': params.page === pageSchool.totalPages - 1}" (click)="onPage(pageSchool.totalPages - 1)">
+            <span class="page-link">尾页</span>
+          </li>
+
+        </ul>
+      </nav>
+    </div>
+  </div>
+</div>
