--- a/web-app/src/app/klass/edit/edit.component.html
+++ b/web-app/src/app/klass/edit/edit.component.html
@@ -1,6 +1,36 @@
 <h3>编辑班级</h3>
-<form (ngSubmit)="onSubmit()" [formGroup]="formGroup">
-  <label for="name">名称：<input id="name" type="text" formControlName="name"/></label>
-  <label for="schoolId">学校：<app-school-select *ngIf="school" id="schoolId" [school]="school" (selected)="onSelected($event)"></app-school-select></label>
-  <button>更新</button>
+<hr>
+<!--<form (ngSubmit)="onSubmit()" [formGroup]="formGroup">-->
+<!--  <label for="name">名称：<input id="name" type="text" formControlName="name"/></label>-->
+<!--  <label>学校：<app-school-select [school]="klass.school" (selected)="onSelected($event)"></app-school-select></label>-->
+<!--  <button>更新</button>-->
+<!--</form>-->
+<form class="container-sm" [formGroup]="formGroup" style="margin: 40px 0px 0px 0px">
+  <div class="mb-3 row">
+    <label class="col-sm-2 col-form-label">班级名称：</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" formControlName="name" name="name" id="name">
+      <small class="text-danger" *ngIf="formGroup.get('name')!.invalid">
+        班级名称不能为空
+      </small>
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label class="col-sm-2 col-form-label">学校名称：</label>
+    <div class="col-sm-10">
+      <app-school-select [school]="klass.school" (selected)="onSelected($event)"></app-school-select>
+      <small class="text-danger" *ngIf="formGroup.get('school')!.invalid">
+        学校名称不能为空
+      </small>
+    </div>
+  </div>
+  <div class="mb-3 row" style="margin: 40px 0px 0px 0px">
+    <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
+      <button class="btn btn-primary" (click)="onSubmit()" [disabled]="formGroup.invalid"><i class="fa fa-save"></i>保存
+      </button>
+    </div>
+    <div class="col-sm-3 offset-sm-1">
+      <button mat-button class="btn btn-secondary" (click)="onNoClick()">取消</button>
+    </div>
+  </div>
 </form>
