--- a/web-app/src/app/klass/school-select/school-select.component.html
+++ b/web-app/src/app/klass/school-select/school-select.component.html
@@ -1,5 +1,4 @@
-<select id="schoolSelect" [formControl]="schoolSelect" (change)="onChange()" [compareWith]="compareFn">
-  <option *ngFor="let school of schools" [ngValue]="school">
-    {{school.name}}
-  </option>
-</select>
+<app-select
+  [url]="url"
+  (selected)="onSelected($event)"
+  [object]="school"></app-select>
