--- a/web-app/src/app/course/user-multiple-select/user-multiple-select.component.html
+++ b/web-app/src/app/course/user-multiple-select/user-multiple-select.component.html
@@ -1,1 +1,1 @@
-<app-multiple-select [list$]="useres$" (changed)="onChange($event)"></app-multiple-select>
+<app-multiple-select [list$]="users$" (changed)="onChange($event)"></app-multiple-select>
