--- a/web-app/src/app/course/add/add.component.html
+++ b/web-app/src/app/course/add/add.component.html
@@ -6,29 +6,31 @@
         <label for="name">名称</label>
         <input type="text" class="form-control" id="name"
                placeholder="名称" formControlName="name" required>
-        <small id="nameMinLength" *ngIf="formGroup.get('name').errors && formGroup.get('name').errors.minlength" class="form-text text-danger">课程名称不得少于2个字符</small>
-        <small id="nameUnique" *ngIf="formGroup.get('name').errors && formGroup.get('name').errors.uniqueName" class="form-text text-danger">当前课程名已被占用</small>
       </div>
       <div class="form-group">
         <label>学校</label>
-        <div>
+        <!-- 添加学校选择控件，例如下拉列表 -->
+        <select class="form-control" formControlName="schoolId">
 
-        </div>
+        </select>
       </div>
       <div class="form-group">
         <label>班级</label>
-        <div>
+        <!-- 添加班级选择控件，例如下拉列表 -->
+        <select class="form-control" formControlName="classId">
 
-        </div>
+        </select>
       </div>
       <div class="form-group">
         <label>学期</label>
-        <div>
-
-        </div>
+        <!-- 添加学期选择控件，例如下拉列表 -->
+        <select class="form-control" formControlName="semester">
+          <option value="spring">春季</option>
+          <option value="summer">夏季</option>
+          <option value="autumn">秋季</option>
+          <option value="winter">冬季</option>
+        </select>
       </div>
-
-
       <div class="form-group">
         <label>用户</label>
         <div>
