--- a/web-app/src/app/klass/add/add.component.html
+++ b/web-app/src/app/klass/add/add.component.html
@@ -1,34 +1,38 @@
-<h3>新增班级</h3>
-<hr>
-<form class="container-sm" style="margin: 40px 0px 0px 0px" [formGroup]="formGroup">
-  <div class="mb-3 row">
-    <label for="name" class="col-sm-2 col-form-label">名称：</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="name" formControlName="name" id="name">
-      <small class="text-danger"
-             *ngIf="formGroup?.get('name')!.invalid">
-        班级名称不能为空
-      </small>
+<div class="main">
+  <h1>新增班级</h1>
+  <hr>
+  <form class="container-sm content" style="margin: 40px 0px 0px 0px" [formGroup]="formGroup">
+    <div class="mb-3 row">
+      <label for="name" class="col-sm-2 col-form-label">名称：</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" name="name" formControlName="name" id="name">
+        <small class="text-danger"
+               *ngIf="formGroup?.get('name')!.invalid">
+          班级名称不能为空
+        </small>
+      </div>
     </div>
-  </div>
-  <div class="mb-3 row">
-    <label class="col-sm-2 col-form-label">学校名称：</label>
-    <div class="col-sm-10">
-      <app-school-select (selected)="onSchoolSelected($event)"></app-school-select>
-      <small class="text-danger"
-             *ngIf="formGroup?.get('school')!.invalid">
-        学校不能为空
-      </small>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">学校名称：</label>
+      <div class="col-sm-10">
+        <app-school-select (selected)="onSchoolSelected($event)"></app-school-select>
+        <small class="text-danger"
+               *ngIf="formGroup?.get('school')!.invalid">
+          学校不能为空
+        </small>
+      </div>
     </div>
-  </div>
-  <div class="mb-3 row" style="margin: 30px 0px 0px 0px">
-    <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
-      <button class="btn btn-primary" (click)="onSubmit()"
-              [disabled]="formGroup.invalid"><i class="fa fa-save"></i>保存
-      </button>
+    <div class="mb-3 row" style="margin: 30px 0px 0px 0px">
+      <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
+        <button class="btn btn-primary" (click)="onSubmit()"
+                [disabled]="formGroup.invalid"><i class="fa fa-save"></i>保存
+        </button>
+      </div>
+      <div class="col-sm-3 offset-sm-1">
+        <button mat-button class="btn btn-secondary" (click)="onNoClick()">取消</button>
+      </div>
     </div>
-    <div class="col-sm-3 offset-sm-1">
-      <button mat-button class="btn btn-secondary" (click)="onNoClick()">取消</button>
-    </div>
-  </div>
-</form>
+  </form>
+
+</div>
+
