--- a/web-app/src/app/login/login.component.html
+++ b/web-app/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
   <div class="col-4">
-    <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+    <form [formGroup]="formGroup!" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="username">用户名</label>
         <input type="text" class="form-control" id="username" aria-describedby="usernameHelp"
