--- a/web-app/src/app/school/add/add.component.sass
+++ b/web-app/src/app/school/add/add.component.sass
@@ -1,2 +1,12 @@
 a.btn-primary
   color: white
+
+.main
+  margin-top: 20px
+  margin-left: 20px
+  font-size: 20px
+  width: 93%
+
+.content
+  width: 98%
+
