--- a/web-app/src/app/personal-center/personal-center.component.html
+++ b/web-app/src/app/personal-center/personal-center.component.html
@@ -1,61 +1,24 @@
-<div class="container-md main">
-  <div class="row">
-    <div class="col-4 text-right">
-      姓名：
-    </div>
-    <div class="col-8">
-      {{user?.name}}
-    </div>
+<div class="row">
+  <div class="col-sm-2 text-right">姓名</div>
+  <div class="col-sm-10">
+    {{teacher?.name}}
   </div>
-  <div class="row">
-    <div class="col-4 text-right">
-      用户名：
-    </div>
-    <div class="col-8">
-      {{user?.username}}
-    </div>
+</div>
+<div class="row">
+  <div class="col-sm-2 text-right">用户名</div>
+  <div class="col-sm-10">
+    {{teacher?.username}}
   </div>
-  <div class="row">
-    <div class="col-4 text-right">
-      性别：
-    </div>
-    <div class="col-8">
-      {{user?.sex | sex}}
-    </div>
+</div>
+<div class="row">
+  <div class="col-sm-2 text-right">性别</div>
+  <div class="col-sm-10">
+    {{teacher?.sex}}
   </div>
-  <div class="row">
-    <div class="col-4 text-right">
-      班级：
-    </div>
-    <div class="col-8">
-      {{user?.klass?.name}}
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-4 text-right">
-      角色：
-    </div>
-    <div class="col-8">
-      {{user?.role | role}}
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-4 text-right">
-      状态：
-    </div>
-    <div class="col-8">
-      {{user?.state | state}}
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-4 text-right">
-      操作：
-    </div>
-    <form class="col-8">
-      <button class="btn btn-primary" type="submit">修改密码</button>
-    </form>
-    <form class="col-8" style="margin: -58px 0px 0px 480px">
-      <button class="btn btn-primary" type="submit">超管权限转交</button>
-    </form>
+</div>
+<div class="row">
+  <div class="col-sm-2 text-right">email</div>
+  <div class="col-sm-10">
+    {{teacher?.email}}
   </div>
 </div>
