--- a/web-app/src/app/school/edit/edit.component.html
+++ b/web-app/src/app/school/edit/edit.component.html
@@ -1,28 +1,25 @@
-<div class="main">
-  <div>
-    <h2>编辑学校</h2>
-  </div>
-  <hr>
-  <form class="container-sm content" [formGroup]="formGroup!" style="margin: 40px 0px 0px 0px">
-    <div class="mb-3 row">
-      <label class="col-sm-2 col-form-label">名称</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" formControlName="name" name="name" id="name">
-        <small class="text-danger"
-               *ngIf="this.formGroup!.get('name')!.invalid">
-          学校名称不能为空
-        </small>
-      </div>
-    </div>
-    <div class="mb-3 row" style="margin: 40px 0px 0px 0px">
-      <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
-        <button class="btn btn-primary" (click)="onSubmit()" [disabled]="formGroup?.invalid"><i class="fa fa-save"></i>保存
-        </button>
-      </div>
-      <div class="col-sm-3 offset-sm-1">
-        <button mat-button class="btn btn-secondary" (click)="onNoClick()">取消</button>
-      </div>
-    </div>
-  </form>
+<div>
+  <h2>编辑学校</h2>
 </div>
+<hr>
+<form class="container-sm" [formGroup]="formGroup" style="margin: 40px 0px 0px 0px">
+  <div class="mb-3 row">
+    <label class="col-sm-2 col-form-label">名称</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" formControlName="name" name="name" id="name">
+      <small class="text-danger" *ngIf="formGroup.get('name')!.invalid">
+        学校名称不能为空
+      </small>
+    </div>
+  </div>
+  <div class="mb-3 row" style="margin: 40px 0px 0px 0px">
+    <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
+      <button class="btn btn-primary" (click)="onSubmit()" [disabled]="formGroup.invalid"><i class="fa fa-save"></i>保存
+      </button>
+    </div>
+    <div class="col-sm-3 offset-sm-1">
+      <button mat-button class="btn btn-secondary" (click)="onNoClick()">取消</button>
+    </div>
+  </div>
+</form>
 
