--- a/web-app/src/app/course/add/add.component.html
+++ b/web-app/src/app/course/add/add.component.html
@@ -10,21 +10,21 @@
       <div class="form-group">
         <label>学校</label>
         <!-- 添加学校选择控件，例如下拉列表 -->
-        <select class="form-control" formControlName="schoolId">
+        <select class="form-control" >
 
         </select>
       </div>
       <div class="form-group">
         <label>班级</label>
         <!-- 添加班级选择控件，例如下拉列表 -->
-        <select class="form-control" formControlName="classId">
+        <select class="form-control" >
 
         </select>
       </div>
       <div class="form-group">
         <label>学期</label>
         <!-- 添加学期选择控件，例如下拉列表 -->
-        <select class="form-control" formControlName="semester">
+        <select class="form-control" >
           <option value="spring">春季</option>
           <option value="summer">夏季</option>
           <option value="autumn">秋季</option>
