--- a/web-app/src/app/personal-center/personal-center.component.html
+++ b/web-app/src/app/personal-center/personal-center.component.html
@@ -55,7 +55,7 @@
       <button class="btn btn-primary" type="submit" (click)="openDialog()">修改密码</button>
     </form>
     <form class="col-8" style="margin: -58px 0px 0px 480px" *ngIf="role === 1">
-      <button class="btn btn-primary" type="submit">超管权限转交</button>
+      <button class="btn btn-primary" type="submit" (click)="openRoleDialog()">超管权限转交</button>
     </form>
   </div>
 </div>
