--- a/web-app/src/app/login/login.component.html
+++ b/web-app/src/app/login/login.component.html
@@ -11,7 +11,7 @@
         <label for="password">密码</label>
         <input type="password" class="form-control" id="password" placeholder="密码" formControlName="password">
       </div>
-      <button type="submit" class="btn btn-primary">提交</button>
+      <button type="submit" class="btn btn-primary">登录</button>
     </form>
   </div>
 </div>
