--- a/web-app/src/app/personal-center/role-change/role-change.component.html
+++ b/web-app/src/app/personal-center/role-change/role-change.component.html
@@ -1,12 +1,12 @@
 <div class="main">
   <div>
-    <h2>超管权限转交</h2>
+    <h1>超管权限转交</h1>
   </div>
   <hr>
-  <div class="container content"> <!-- 添加一个容器来包裹整个表单 -->
-    <div class="row"> <!-- 使用row来创建一个水平行 -->
-      <div class="col-sm-2 col-form-label">用户</div> <!-- 标签位于2列宽的空间 -->
-      <div class="col-sm-10"> <!-- 输入框位于10列宽的空间 -->
+  <div class="container content">
+    <div class="row">
+      <div class="col-sm-2 col-form-label">用户</div>
+      <div class="col-sm-10">
         <select class="form-control" [(ngModel)]="roleData.userId" name="user.id" id="user.id">
           <option *ngFor="let user of users" [value]="user.id">
             {{user.username}}
@@ -18,7 +18,7 @@
         </small>
       </div>
     </div>
-    <div class="row" style="margin: 20px 0px 0px 0px"> <!-- 按钮组也放在一个行内 -->
+    <div class="row" style="margin: 20px 0px 0px 0px">
       <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
         <button class="btn btn-primary" (click)="onSubmit()"
                 [disabled]="!roleData.userId">保存</button>
