--- a/web-app/src/app/term/edit/edit.component.html
+++ b/web-app/src/app/term/edit/edit.component.html
@@ -1,1 +1,55 @@
-<p>edit works!</p>
+<div class="main">
+  <h1>编辑学期</h1>
+  <hr>
+  <form class="container-sm content" [formGroup]="formGroup!" style="margin: 40px 0px 0px 0px">
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">学校名称：</label>
+      <div class="col-sm-10">
+        <app-school-select [school]="term.school!" (selected)="onSelected($event)"></app-school-select>
+        <small class="text-danger"
+               *ngIf="formGroup!.get('school')!.invalid">
+          学校名称不能为空
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">学期名称：</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" formControlName="name" name="name" id="name">
+        <small class="text-danger"
+               *ngIf="formGroup!.get('name')!.invalid">
+          学期名称不能为空
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">开始时间：</label>
+      <div class="col-sm-10">
+        <input type="date" class="form-control" formControlName="startTime" name="startTime" id="startTime">
+        <small class="text-danger"
+               *ngIf="formGroup!.get('startTime')!.invalid">
+          开始时间不能为空
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">结束时间：</label>
+      <div class="col-sm-10">
+        <input type="date" class="form-control" formControlName="endTime" name="endTime" id="endTime">
+        <small class="text-danger"
+               *ngIf="formGroup!.get('endTime')!.invalid">
+          结束时间不能为空
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row" style="margin: 40px 0px 0px 0px">
+      <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
+        <button class="btn btn-primary" (click)="onSubmit()" [disabled]="formGroup?.invalid"><i class="fa fa-save"></i>保存
+        </button>
+      </div>
+      <div class="col-sm-3 offset-sm-1">
+        <button mat-button class="btn btn-secondary" (click)="onNoClick()">取消</button>
+      </div>
+    </div>
+  </form>
+</div>
