--- a/web-app/src/app/term/index/index.component.html
+++ b/web-app/src/app/term/index/index.component.html
@@ -20,7 +20,7 @@
       </form>
     </div>
     <div class="col-md-4 text-right">
-      <a class="btn btn-primary"><span class="oi oi-plus"></span>新增</a>
+      <a class="btn btn-primary" (click)="openAddDialog()"><span class="oi oi-plus"></span>新增</a>
     </div>
   </div>
 
@@ -40,8 +40,8 @@
       <td>{{term.startTime}}</td>
       <td>{{term.endTime}}</td>
       <td>
-        <button class="btn btn-sm btn-info button"><span class="oi oi-pencil"></span>编辑</button>
-        <button class="btn btn-sm btn-danger"><span class="oi oi-trash"></span>删除</button>
+        <button (click)="openEditDialog(term)" class="btn btn-sm btn-info button"><span class="oi oi-pencil"></span>编辑</button>
+        <button (click)="onDelete(term)" class="btn btn-sm btn-danger"><span class="oi oi-trash"></span>删除</button>
       </td>
     </tr>
   </table>
