--- a/web-app/src/app/course/index/index.component.html
+++ b/web-app/src/app/course/index/index.component.html
@@ -1,7 +1,7 @@
-<div class="container-md main" style="margin-left: 120px; margin-right: auto;">
+<div class="container-md main" style="margin-top: 120px;">
   <div class="row">
     <div class="col-md-8">
-      <form class="form-inline d-flex justify-content-between" style="width: 1050px"
+      <form class="form-inline d-flex justify-content-between" style="width: auto"
             (ngSubmit)="onSubmit(searchForm)" #searchForm="ngForm">
         <div class="form-group mb-2">
           <label class="mr-2">学校：</label>
@@ -38,7 +38,7 @@
         </div>
       </form>
     </div>
-    <div class="col-md-4 text-right" style="margin: -53px 0px 0px 1100px" *ngIf="role !== 3">
+    <div class="col-md-4 text-right" style="margin: -53px 0px 0px 1100px" >
       <a class="btn btn-primary mb-2" (click)="openAddDialog()"><i class="fas fa-plus"></i>新增</a>
     </div>
   </div>
