--- a/web-app/src/app/course/edit/edit.component.html
+++ b/web-app/src/app/course/edit/edit.component.html
@@ -1,1 +1,109 @@
-<p>edit works!</p>
+<div>
+    <h2>编辑课表</h2>
+  </div>
+  <hr>
+  <form class="container-sm" [formGroup]="formGroup" style="margin: 40px 0px 0px 0px">
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">学校名称</label>
+      <div class="col-sm-10">
+        <!-- <app-school-select formControlName="school_id" (beChange)="onSchoolChange($event)"></app-school-select> -->
+        <small class="text-danger" *ngIf="formGroup.get('school_id')!.invalid">
+          必须选择学校
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">班级名称</label>
+      <div class="col-sm-10">
+        <select class="form-control" formControlName="clazz_id">
+          <option [ngValue]="null">所有班级</option>
+          <option *ngFor="let clazz of clazzes" [value]="clazz.id">
+            {{clazz.name}}
+          </option>
+        </select>
+        <small class="text-danger"
+               *ngIf="formGroup.get('clazz_id')!.invalid">
+          必须指定一个班级
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">学期名称</label>
+      <div class="col-sm-10">
+        <select class="form-control" formControlName="term_id" (change)="onTermChange(formGroup.get('term_id')!.value ?? 1)">
+          <option [ngValue]="null">所有学期</option>
+          <option *ngFor="let term of terms" [value]="term.id">
+            {{term.name}}
+          </option>
+        </select>
+        <small class="text-danger"
+               *ngIf="formGroup.get('term_id')!.invalid">
+          必须指定一个班级
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">课程名称</label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" formControlName="name">
+        <small class="text-danger" *ngIf="formGroup.get('name')!.invalid">
+          课程名称不能为空
+        </small>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">类别</label>
+      <div class="col-sm-10" (change)="onSoryChange()">
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" id="sory-bi"
+                 name="sory"
+                 formControlName="sory"
+                 [value]="1">
+          <label class="form-check-label" for="sory-bi">必修</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" id="sory-option"
+                 name="sory"
+                 formControlName="sory"
+                 [value]="0">
+          <label class="form-check-label" for="sory-option">选修</label>
+        </div>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">选择周数</label>
+      <div class="col-sm-10">
+        <select formControlName="week" name="course.week">
+            <option *ngFor="let week of weeks" [value]="week">{{ week }}</option>
+        </select>
+    </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">周几上课</label>
+      <div class="col-sm-10">
+        <select formControlName="day">
+          <option *ngFor="let day of days" [value]="day.value">{{ day.name }}</option>
+        </select>
+      </div>
+    </div>
+    <div class="mb-3 row">
+      <label class="col-sm-2 col-form-label">课程名称</label>
+      <div class="col-sm-10">
+        <select formControlName="period">
+          <option *ngFor="let period of periods" [value]="period.value">{{ period.name }}</option>
+        </select>
+      </div>
+    </div>
+    <div class="mb-3 row" style="margin: 40px 0px 0px 0px">
+      <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
+        <button appLoading class="btn btn-primary" (click)="onSubmit()" [disabled]="formGroup.invalid">
+          <i class="fa fa-save"></i>保存
+        </button>
+      </div>
+      <div class="col-sm-3 offset-sm-1">
+        <button mat-button class="btn btn-secondary" (click)="onNoClick()">取消</button>
+      </div>
+    </div>
+  </form>
+  
+  
