--- a/web-app/src/app/course/index/index.component.html
+++ b/web-app/src/app/course/index/index.component.html
@@ -5,14 +5,14 @@
             (ngSubmit)="onSubmit(searchForm)" #searchForm="ngForm">
         <div class="form-group mb-2">
           <label class="mr-2">学校：</label>
+          <app-school-select (selected)="onSchoolChange($event)" ></app-school-select>
           <!-- 默认提示选项 -->
-          <!-- <app-school-select name="school" id="school" [(ngModel)]="searchParameters.school"></app-school-select> -->
         </div>
         <div class="form-group mb-2">
           <label class="mr-2">班级：</label>
           <!-- 默认提示选项 -->
-          <select class="form-control" [(ngModel)]="searchParameters.klassId" name="clazz_id" id="clazz_id">
-            <option [ngValue]="null">所有班级</option>
+          <select class="form-control" [(ngModel)]="searchParameters.klassId" name="klassId" id="klassId">
+            <option [ngValue]="0">所有班级</option>
             <option *ngFor="let clazz of clazzes" [value]="clazz.id">
               {{clazz.name}}
             </option>
@@ -22,7 +22,7 @@
           <label class="mr-2">学期：</label>
           <!-- 默认提示选项 -->
           <select class="form-control" [(ngModel)]="searchParameters.termId" name="term_id" id="term_id">
-            <option [ngValue]="null">所有学期</option>
+            <option [ngValue]="0">所有学期</option>
             <option *ngFor="let term of terms" [value]="term.id">
               {{term.name}}
             </option>
