--- a/web-app/src/app/my-course/index/index.component.sass
+++ b/web-app/src/app/my-course/index/index.component.sass
@@ -1,5 +1,5 @@
 form
-  margin-top: 150px
+  margin-top: 90px
 
 .btn
   margin-right: 0.5em
@@ -9,9 +9,9 @@ form
   margin-right: 0.3em
 
 .main
-  margin: 100px 100px 100px -50px
+  margin: 100px 0px 0px -50px
   font-size: 20px
-
+  width: 2000px
 
 .btn-inline
   display: inline-block
@@ -31,3 +31,4 @@ a.btn-primary
 .table
   margin-top: 20px
   width: 1400px
+
