--- a/web-app/src/app/user/index/index.component.html
+++ b/web-app/src/app/user/index/index.component.html
@@ -1,7 +1,7 @@
 <div class="container-md main">
   <div>
     <div class="col-md-12">
-      <form class="form-inline d-flex justify-content-between" style="width: 1300px"
+      <form class="form-inline d-flex justify-content-between" style="width: 1200px"
             (ngSubmit)="onQuery()">
         <div class="form-group mb-2">
           <label class="mr-2">班级：</label>
@@ -44,14 +44,14 @@
         </div>
       </form>
     </div>
-    <div class="col-md" style="margin: -53px 0px 0px 1350px; width: 120px">
-      <button class="btn btn-primary mr-2" (click)="openAddDialog()"><i class="fas fa-plus"></i>新增</button>
+    <div class="col-md" style="margin: -53px 0px 0px 1250px; width: 120px">
+      <button class="btn btn-primary mr-2" (click)="openAddDialog()"><span class="oi oi-plus"></span>新增</button>
     </div>
   </div>
 
-  <table class="table table-striped mt-2" style="width: 1450px">
+  <table class="table">
     <thead>
-    <tr class="table-primary">
+    <tr>
       <th>序号</th>
       <th>姓名</th>
       <th>用户名</th>
@@ -75,13 +75,13 @@
       <td>{{user.state | state}}</td>
       <td>
         <div class="btn-inline" *ngIf="user.id === me!.id || user!.role! > me!.role">
-          <a class="btn btn-outline-primary btn-sm" (click)="openEditDialog(user)">
-            <i class="fas fa-pen"></i>编辑
+          <a class="btn btn-sm btn-info button" (click)="openEditDialog(user)">
+            <span class="oi oi-pencil"></span>编辑
           </a>
         </div>
         <div class="btn-inline" *ngIf="user!.role! > me!.role">
-        <span class="btn btn-sm btn-outline-danger" (click)="onDelete(user)">
-            <i class="far fa-trash-alt"></i>删除
+        <span class="btn btn-sm btn-danger" (click)="onDelete(user)">
+            <span class="oi oi-trash"></span>删除
         </span>
         </div>
       </td>
