--- a/web-app/src/app/term/edit/edit.component.html
+++ b/web-app/src/app/term/edit/edit.component.html
@@ -46,10 +46,10 @@
       <label class="col-sm-2 col-form-label">结束时间：</label>
       <div class="col-sm-10">
         <input type="date" class="form-control" formControlName="endTime" name="endTime" id="endTime">
-        <small class="text-danger" *ngIf="formGroup!.get('endTime')?.errors?.['required']">
+        <small class="text-danger" *ngIf="formGroup?.get('endTime')?.errors?.['required']">
           结束时间不能为空
         </small>
-        <small class="text-danger" *ngIf="formGroup!.get('endTime')?.errors?.['isNotSunday']">
+        <small class="text-danger" *ngIf="formGroup?.get('endTime')?.errors?.['isNotSunday']">
           结束时间必须是周日
         </small>
         <br>
