--- a/web-app/src/app/my-course/create/create.component.html
+++ b/web-app/src/app/my-course/create/create.component.html
@@ -1,1 +1,84 @@
-<p>create works!</p>
+<div class="main">
+  <h1>创建我的选修课程</h1>
+  <hr>
+<form class="container-sm content" style="margin: 40px 0px 0px 0px" [formGroup]="formGroup">
+  <div class="mb-3 row">
+    <label class="col-sm-2 col-form-label">学期</label>
+    <div class="col-sm-10">
+      <select class="form-control" (change)="onTermChange(formGroup.get('termId')!.value ?? 0)" name="course.term_id" id="course.term_id" formControlName="termId">
+        <option [ngValue]="null">所有学期</option>
+        <option *ngFor="let term of terms" [value]="term.id">
+          {{term.name}}
+        </option>
+      </select>
+      <small class="text-danger"
+             *ngIf="course.term_id === null">
+        必须指定一个学期
+      </small>
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="name" class="col-sm-2 col-form-label">课程名称</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control"  name="name" id="name" formControlName="name">
+      <small class="text-danger"
+             *ngIf="formGroup?.get('name')!.invalid">
+        课程名称不能为空
+      </small>
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="name" class="col-sm-2 col-form-label">选择周数</label>
+    <div class="col-sm-10">
+      <select name="course.week" formControlName="week" class="custom-select mr-sm-2">
+        <option selected disabled [value]=0>请选择周数</option>
+        <option *ngFor="let week of weeks" [value]="week">{{ week }}</option>
+      </select>
+      <small class="text-danger"
+             *ngIf="!formGroup.get('week')!.value ?? 0">
+        周数不能为空
+      </small>
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="name" class="col-sm-2 col-form-label">周几上课</label>
+    <div class="col-sm-10">
+      <select name="course.day" formControlName="day" class="custom-select mr-sm-2">
+        <option selected disabled [value]=0>请选择天数</option>
+        <option *ngFor="let day of days" [value]="day.value">{{ day.value }}</option>
+      </select>
+      <small class="text-danger"
+             *ngIf="!formGroup.get('day')!.value ?? 0">
+        天数不能为空
+      </small>
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="name" class="col-sm-2 col-form-label">上课节数</label>
+    <div class="col-sm-10">
+      <select class="custom-select mr-sm-2" id="section" name="section" formControlName="period">
+        <option selected disabled [value]=0>请选择课程节次</option>
+        <option [value]="1">第一大节</option>
+        <option [value]="2">第二大节</option>
+        <option [value]="3">第三大节</option>
+        <option [value]="4">第四大节</option>
+        <option [value]="5">第五大节</option>
+      </select>
+      <small class="text-danger"
+             *ngIf="!formGroup.get('period')!.value ?? 0">
+        课程节次不能为空
+      </small>
+    </div>
+  </div>
+  <div class="mb-3 row" style="margin: 20px 0px 0px 0px">
+    <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
+      <button appLoading class="btn btn-primary" (click)="onSubmit()"
+              [disabled]="formGroup.invalid"><i class="fa fa-save"></i>保存
+      </button>
+    </div>
+    <div class="col-sm-3 offset-sm-1">
+      <button mat-button class="btn btn-secondary" (click)="onNoClick()">取消</button>
+    </div>
+  </div>
+</form>
+</div>
