--- a/web-app/src/app/my-course/index/index.component.html
+++ b/web-app/src/app/my-course/index/index.component.html
@@ -32,7 +32,7 @@
         </div>
       </form>
     </div>
-    <div class="col-md-4 text-right" style="margin-left: 780px;margin-top: -145px">
+    <div class="col-md-4">
       <a class="btn btn-primary mb-2" (click)="openCreateDialog()"><span class="oi oi-plus"></span>创建我的选修课程</a>
     </div>
     <div class="col-md-4 text-right" style="margin-left: 980px;margin-top: -145px">
