--- a/web-app/src/app/course/edit/edit.component.html
+++ b/web-app/src/app/course/edit/edit.component.html
@@ -6,14 +6,14 @@
   <div class="mb-3 row">
     <label class="col-sm-2 col-form-label">学校名称</label>
     <div class="col-sm-10">
-      <app-school-select (selected)="onSchoolChange($event)"></app-school-select>
+      <app-school-select (selected)="onSchoolChange($event)" [school]="schools[0]!"></app-school-select>
       <small class="text-danger"
              *ngIf="course.school_id === null">
         必须指定一个学校
       </small>
     </div>
   </div>
-  <div class="mb-3 row" *ngIf="course.school_id !== null">
+  <div class="mb-3 row">
     <label class="col-sm-2 col-form-label">班级名称</label>
     <div class="col-sm-10">
       <select class="form-control"  name="course.clazz_id" id="course.clazz_id" formControlName="klassId" (change)="onKlassChange(formGroup.get('klassId')!.value ?? 0)">
@@ -28,7 +28,7 @@
       </small>
     </div>
   </div>
-  <div class="mb-3 row" *ngIf="course.school_id !== null">
+  <div class="mb-3 row">
     <label class="col-sm-2 col-form-label">学期</label>
     <div class="col-sm-10">
       <select class="form-control"  (change)="onTermChange(formGroup.get('termId')!.value ?? 0)" name="course.term_id" id="course.term_id" formControlName="termId">
@@ -90,9 +90,13 @@
   <div class="mb-3 row">
     <label for="name" class="col-sm-2 col-form-label">选择周数</label>
     <div class="col-sm-10">
-      <select name="course.week" formControlName="week" class="custom-select mr-sm-2">
-          <option *ngFor="let week of weeks" [value]="week">{{ week }}</option>
-        </select>
+      <mat-form-field>
+        <mat-select [multiple]="true" #multiSelect="matSelect" formControlName="week"> 
+          <mat-option *ngFor="let week of weeks" [value]="week">
+            {{ week }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
       </div>
   </div>
   <div class="mb-3 row">
@@ -119,7 +123,7 @@
   <div class="mb-3 row" style="margin: 20px 0px 0px 0px">
     <div class="col-sm-3 offset-sm-1" style="margin: 0px 0px 0px 200px">
       <button appLoading class="btn btn-primary" (click)="onSubmit()"
-              [disabled]="formGroup.invalid"><i class="fa fa-save"></i>保存
+              [disabled]="formGroup.invalid && formGroup.get('week')?.value!.length === 0"><i class="fa fa-save"></i>保存
       </button>
     </div>
     <div class="col-sm-3 offset-sm-1">
