--- a/web-app/src/app/my-course/index/index.component.html
+++ b/web-app/src/app/my-course/index/index.component.html
@@ -35,7 +35,7 @@
     <div class="col-md-4">
       <a class="btn btn-primary mb-2" (click)="openCreateDialog()"><span class="oi oi-plus"></span>创建我的选修课程</a>
     </div>
-    <div class="col-md-4 text-right" style="margin-left: 980px;margin-top: -145px">
+    <div class="col-md-4" style="margin-left: 950px;margin-top: -145px">
       <a class="btn btn-primary mb-2" (click)="openAddDialog()"><span class="oi oi-plus"></span>添加我的选修课程</a>
     </div>
   </div>
