--- a/web-app/src/app/my-course/create/create.component.html
+++ b/web-app/src/app/my-course/create/create.component.html
@@ -6,7 +6,6 @@
     <label class="col-sm-2 col-form-label">学期</label>
     <div class="col-sm-10">
       <select class="form-control" (change)="onTermChange(formGroup.get('termId')!.value ?? 0)" name="course.term_id" id="course.term_id" formControlName="termId">
-        <option [ngValue]="null">所有学期</option>
         <option *ngFor="let term of terms" [value]="term.id">
           {{term.name}}
         </option>
@@ -30,14 +29,13 @@
   <div class="mb-3 row">
     <label for="name" class="col-sm-2 col-form-label">选择周数</label>
     <div class="col-sm-10">
-      <select name="course.week" formControlName="week" class="custom-select mr-sm-2">
-        <option selected disabled [value]=0>请选择周数</option>
-        <option *ngFor="let week of weeks" [value]="week">{{ week }}</option>
-      </select>
-      <small class="text-danger"
-             *ngIf="!formGroup.get('week')!.value ?? 0">
-        周数不能为空
-      </small>
+      <mat-form-field>
+        <mat-select [multiple]="true" #multiSelect="matSelect" formControlName="week">
+          <mat-option *ngFor="let week of weeks" [value]="week">
+            {{ week }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
   </div>
   <div class="mb-3 row">
