--- a/web-app/src/app/nav/nav.component.html
+++ b/web-app/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
   <div class="top-bar">
     <div class="title">课表查询系统</div>
     <form class="form-inline logout" (ngSubmit)="onLogout()">
-      <div class="navbar-brand">欢迎 用户名</div>
+      <div class="navbar-brand">欢迎 {{me?.name}}</div>
       <button class="btn btn-outline-light my-2 my-sm-0" type="submit">退出登录</button>
     </form>
   </div>
